--- a/final.css
+++ b/final.css
@@ -793,7 +793,7 @@
 }
 
 /* media queries */
-@media only screen and (max-width:480px) 
+@media screen and (max-width:480px) 
 { 
   .banner .navbar .icon{
     font-size: 15px;
